fix scroll on map and add white bg behind cta

--- a/src/components/questionnaire/QuestionnareCard/styles.module.scss
+++ b/src/components/questionnaire/QuestionnareCard/styles.module.scss
@@ -45,9 +45,21 @@
   bottom: 1rem;
   left: 1rem;
   height: 3.75rem;
+  z-index: 2;
 }
 
 .nextButton span, button[type="submit"] span { 
   font-size: 1.5rem; /* Ensure the icon has a visible size */
 
+}
+
+.btnsWhiteBg {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 5.75rem;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  // border-radius: 40px 40px 0 0;
 }
